[metadata]
name = ceia-soccer-twos
version = 0.1.6
author = Bryan L M Oliveira @ CExIA
author_email = bryanlmoliveira@gmail.com
description = A pre-compiled soccer-twos (Unity ML Agents) environment with a nice visualizer.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bryanoliveira/soccer-twos-env
project_urls =
    Bug Tracker = https://github.com/bryanoliveira/soccer-twos-env/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Topic :: Games/Entertainment :: Simulation
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir =
    = src
packages = find:

# ALERT keep in sync with requirements.txt!
install_requires =
    gdown==3.14.0
    gym==0.19.0
    gym-unity==0.27.0
    mlagents==0.27.0
    mlagents-envs==0.27.0
    numpy==1.19.5

python_requires = >=3.6

[options.packages.find]
where = src